# webbooks

./: .gitignore  build.py  config.py  main.py  pyproject.toml
.github/workflows/: deploy.yml
books/: Rudin_Taynovidec_10_Beglec.854855.fb2.epub  Rudin_Taynovidec_1_Taynovidec-Tom-1-Propavshiy-dar.814169.fb2.epub  Rudin_Taynovidec_2_Eliksir-sushchnosti.817913.fb2.epub  Rudin_Taynovidec_3_Ukradennye-sny-SI-.822060.fb2.epub  Rudin_Taynovidec_4_Taynovidec-Tom-4-Obratnoe-techenie.825625.fb2.epub  Rudin_Taynovidec_5_Taynovidec-Tom-5-Starshaya-vetv.827919.fb2.epub  Rudin_Taynovidec_6_Upryamyy-hranitel.830095.fb2.epub  Rudin_Taynovidec_7_Taynovidec-Tom-7-Tam-chudesa.832749.fb2.epub  Rudin_Taynovidec_8_Taynovidec-Tom-8-Staryy-proydoha.839890.fb2.epub  war-and-peace.epub
books/Тайновидец: Алекс Рудин/: Том 1.epub  Том 10.epub  Том 4.epub  Том 5.epub  Том 6.epub  Том 7.epub  Том 8.epub  Том 9.epub
books/Ученый в средневековье: sandlord/: Том 1-4.epub
generator/: __init__.py  paginator.py  renderer.py
parsers/: __init__.py  base.py  epub_parser.py  fb2_parser.py
static/: app.js  style.css
templates/: base.html  cover.html  goto.html  index.html  page.html  toc.html
